<resources>
    <string name="app_name">SMART LIBRARY IF UNIKOM</string>
    <string name="navigation_home">Beranda</string>
    <string name="navigation_search">Pencarian</string>
    <string name="navigation_account">Akun</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleapp">Perpustakaan Digital IF Unikom</string>
    <string name="judul_skripsi">Judul Skripsi</string>
    <string name="nim">NIM</string>
    <string name="timeout">Connection Timeout</string>
    <string name="no_internet">Not Connect to The Internet</string>
    <string name="poster_backdrop">backdrop</string>
    <string name="poster">poster</string>
    <string name="penulis">penulis</string>
    <string name="melakukandownload">Sedang Mendownload Data</string>


    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="navigation_device">Device</string>
    <string name="navigation_skripsi">Skripsi</string>

    <string name="qm_star">Star</string>
    <string name="qm_custom_link">Link</string>
    <string name="qm_custom_unlink">Unlink</string>
    <string name="email">email</string>
    <string name="hakakses">Hak Akses</string>
    <string name="edit">Edit</string>
    <string name="ubahpass">Ubah Password</string>
    <string name="logout">Logout</string>
    <string name="kelompok">Kelompok Keilmuan</string>
    <string name="open">Open</string>
    <string name="pinjam">Pinjam</string>
    <string name="kosong">Belum Ada Data</string>
    <string name="add_to_borrow">Pinjam</string>
    <string name="search_skripsi">Search Skripsi</string>
    <string name="navigation_buku">Buku</string>
    <string name="penerbit">Penerbit</string>
    <string name="edisi">Edisi</string>
    <string name="jumlahbuku">Jumlah Buku</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="login">Login</string>
    <string name="imagelogo">ImageLogo</string>
    <string name="masukkan_password_lama">Masukkan Password Lama</string>
    <string name="masukkan_password_baru">Masukkan Password Baru</string>
    <string name="sedang_mendownload_data">Sedang Mendownload Data …</string>
    <string name="kembalikkan">Return</string>

    <string name="placeholder_table_of_contents">Table of Contents Placeholder</string>
    <string name="placeholder_table_of_contents_no_data">No Table of Contents for Document</string>
    <string name="placeholder_table_of_contents_element_title">Chapter 1</string>
    <string name="placeholder_table_of_contents_element_page">Page 1</string>
    <string name="placeholder_reader_title">Reader Title Placeholder</string>
    <string name="pdf_reader_accessibility_toc">Show table of contents</string>
    <string name="page_number">Page Number</string>
    <string name="textview">TextView</string>
    <string name="meminjam">Melakukan Proses Peminjaman</string>
    <string name="daftar_peminjaman">Daftar Peminjaman</string>
    <string name="kembalikan">Return</string>
    <string name="halaman">jumlah halaman</string>
    <string name="tgl_pinjam">Tanggal Pinjam</string>
    <string name="tgl_kembali">Tanggal Kembali</string>
    <string name="subtitle">ENJOY IN CODE</string>
    <string name="histori_peminjaman">Histori Peminjaman</string>
    <string name="half_name">Smart Library</string>
    <string name="second_name">Teknik Informatika Unikom</string>
    <string name="login_NIM_hint">NIM or NIP</string>
</resources>
