<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/margin_small_size"
    app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/skripsi_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/pdf_file"
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_title_pinjam"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/pdf_file"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:scrollHorizontally="true"
            android:text="@string/judul_skripsi"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/pdf_file"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_tgl_pinjam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_title_pinjam"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/pdf_file"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/tgl_pinjam"
            app:layout_constraintStart_toEndOf="@+id/pdf_file"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_pinjam" />

        <TextView
            android:id="@+id/txt_tgl_kembali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/txt_tgl_pinjam"
            android:text="@string/tgl_kembali"
            app:layout_constraintStart_toEndOf="@+id/pdf_file"
            app:layout_constraintTop_toBottomOf="@+id/txt_tgl_pinjam" />

        <Button
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/kembalikan"
            android:textColor="#fff"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toEndOf="@+id/pdf_file"
            app:layout_constraintTop_toBottomOf="@+id/txt_tgl_kembali"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/buttonstyle"
            android:text="@string/open"
            android:textColor="#fff"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toEndOf="@+id/btn_return"
            app:layout_constraintTop_toBottomOf="@+id/txt_tgl_kembali"
            tools:ignore="ButtonStyle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>