<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ubah"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UbahActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_ubah"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="6dp"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:layout_collapseMode="pin"
        tools:targetApi="lollipop"/>

    <ImageView
        android:padding="@dimen/margin_normal_size"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:src="@drawable/logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:padding="@dimen/margin_normal_size"
        android:id="@+id/textInputEmail"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">
        <EditText
            android:id="@+id/editTextPasswordLama"
            style="@style/modifiedEditText"
            android:padding="@dimen/margin_normal_size"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/masukkan_password_lama"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        android:padding="@dimen/margin_normal_size"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin">
        <EditText
            android:id="@+id/editTextPasswordBaru"
            android:padding="@dimen/margin_normal_size"
            style="@style/modifiedEditText"
            android:hint="@string/masukkan_password_baru"
            android:maxLines="1"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ubahButton"
        android:background="@drawable/buttonstyle"
        style="@style/loginButton"
        android:text="@string/ubah_password"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/loginViewsMargin"/>


    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/pb_ubah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"/>

</LinearLayout>