<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailHomeActivity">

    <include
        android:id="@+id/progressBar_Detail"
        android:visibility="gone"
        layout="@layout/layout_progress_bar_download"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:titleEnabled="false"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_backdrop"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:fitsSystemWindows="true"
                android:contentDescription="@string/poster_backdrop"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="6dp"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:layout_collapseMode="pin"
                tools:targetApi="lollipop"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/layout_data"
                android:layout_marginTop="16dp"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <LinearLayout
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="@dimen/margin_normal_size"
                        android:src="@drawable/ic_library_books_black_24dp"
                        android:contentDescription="@string/imagelogo" />
                    <TextView
                        android:id="@+id/tvDetailJudul"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal_size"
                        android:layout_marginEnd="@dimen/margin_normal_size"
                        android:layout_marginTop="@dimen/margin_normal_size"
                        android:text="@string/judul_skripsi"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="@dimen/margin_normal_size"
                        android:src="@drawable/ic_school_black_24dp"
                        android:contentDescription="@string/imagelogo" />
                    <TextView
                        android:id="@+id/tvDetailNim"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal_size"
                        android:layout_marginTop="@dimen/margin_normal_size"
                        android:layout_marginEnd="@dimen/margin_normal_size"
                        android:text="@string/nim"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="@dimen/margin_normal_size"
                        android:src="@drawable/ic_stars_black_24dp"
                        android:contentDescription="@string/imagelogo" />
                    <TextView
                        android:id="@+id/tvDetailPenulis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_normal_size"
                        android:layout_marginEnd="@dimen/margin_normal_size"
                        android:layout_marginTop="@dimen/margin_small_size"
                        android:text="@string/penulis"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:paddingStart="25dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">
                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="@dimen/margin_normal_size"
                        android:src="@drawable/ic_create_black_24dp"
                        android:contentDescription="@string/imagelogo" />
                    <TextView
                        android:id="@+id/tvDetailKk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginStart="@dimen/margin_normal_size"
                        android:layout_marginEnd="@dimen/margin_normal_size"
                        android:layout_marginTop="@dimen/margin_small_size"
                        android:text="@string/kelompok"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center">

                    <Button
                        android:visibility="gone"
                        android:id="@+id/btn_borrow"
                        android:textColor="#fff"
                        android:background="@drawable/buttonstyle"
                        android:layout_marginTop="35dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/Pinjam"
                        tools:ignore="ButtonStyle" />
                    <Button
                        android:visibility="gone"
                        android:id="@+id/btn_open"
                        android:textColor="#fff"
                        android:background="@drawable/buttonstyle"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/open"
                        tools:ignore="ButtonStyle" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>



    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

